# persons_database_with_tauri_vue

./: index.html  package-lock.json  package.json
.vite/deps_temp_af84f0c8/: @element-plus_icons-vue.js  chunk-JT3PBWEO.js  chunk-LXQHCBNA.js  element-plus.js  element-plus.js.map  vue.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  config.yaml  tauri.conf.json
src-tauri/src/: bd_manager.rs  cmd_manager.rs  main.rs  storage.rs  ui.rs  yaml.rs
src/components/Buttons/: AddInfoButton.vue  DeleteButton.vue  FindByIdButton.vue  SelectAFileButton.vue  ShowInfoButton.vue
src/components/Inputs/: InputDataLine.vue  NumPad.vue
src/components/Outputs/: OutputInfo.vue
